# scaffold-rust-restapi

./: .env.example  .gitignore  Cargo.toml  README.md  Rocket.toml.example
docker/: api.Dockerfile
migrations/2023-08-17-112839_init_script/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/cmd/: server.rs
src/cmd/routes/: post.rs  user.rs
src/common/: mod.rs  pagination.rs  response.rs
src/internals/auth/: jwt.rs
src/internals/db/mysql/: config.rs
src/models/: default_model.rs  mod.rs  post.rs  user.rs
src/models/dtos/: mod.rs  post_dto.rs  user_dto.rs
src/services/: mod.rs
src/services/handlers/post/: post_handler.rs
src/services/handlers/user/: user_handler.rs
