[package]
name = "rocket-diesel-example"
version = "0.1.0"
edition = "2021"
author = "Gn0hp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"]}
dotenvy = "0.15.7"
serde = "1.0.180"
chrono = { version = "0.4.26", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4"] }
diesel = { version = "2.1.0", features = ["mysql", "chrono"] }
byteorder = "1.4"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]
#cargo watch -q -c -w src/ -x run